--- a/faceit_analyzer/src/main/resources/application.properties
+++ b/faceit_analyzer/src/main/resources/application.properties
@@ -5,3 +5,5 @@ faceit.nickname=Bbl6l9DOK
 faceit.api-key=d699bb72-877e-4b70-97c3-9eb1ffaa9d58
 faceit.api-url=https://open.faceit.com/data/v4
 faceit.id=ee5f92e6-4f82-4d79-b8f9-cd759b89a0d7
+
+spring.kafka.bootstrap-servers=${KAFKA_URL:localhost:9092}
