--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=dbsaver
+
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/faceitDb}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.kafka.bootstrap-servers=${KAFKA_URL:localhost:9092}
+spring.kafka.consumer.auto-offset-reset=earliest
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
