--- a/faceit_analyzer/pom.xml
+++ b/faceit_analyzer/pom.xml
@@ -7,7 +7,7 @@
 		<groupId>com.ramis</groupId>
 		<artifactId>MaratikFaceitAnalyzer</artifactId>
 		<version>1.0-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
 	</parent>
 
 	<artifactId>faceit_analyzer</artifactId>
@@ -44,6 +44,11 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 
 		<dependency>
