--- a/db_saver/Dockerfile
+++ b/db_saver/Dockerfile
@@ -1,10 +1,11 @@
-FROM  eclipse-temurin:17-jdk-alpine AS builder
+FROM maven:3.9-eclipse-temurin-17-alpine AS builder
 
 WORKDIR /app
 
-COPY . .
+COPY pom.xml .
+COPY src src/
 
-RUN ./mvnw clean package -DskipTests -pl db_saver -am
+RUN mvn clean package -DskipTests
 
 FROM eclipse-temurin:17-jre-alpine
 
@@ -13,7 +14,7 @@ WORKDIR /app
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
 
-COPY --from=builder --chown=spring:spring /app/db_saver/target/*.jar app.jar
+COPY --from=builder --chown=spring:spring /app/target/*.jar app.jar
 
 ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
 ENV SPRING_PROFILES_ACTIVE="production"
