--- a/db_saver/Dockerfile
+++ b/db_saver/Dockerfile
@@ -1,27 +1,12 @@
 FROM maven:3.9-eclipse-temurin-17-alpine AS builder
-
 WORKDIR /app
-
-COPY pom.xml .
-COPY src src/
+COPY . .
 
 RUN mvn clean package -DskipTests
-
 FROM eclipse-temurin:17-jre-alpine
-
 WORKDIR /app
-
 RUN addgroup -S spring && adduser -S spring -G spring
 USER spring:spring
-
 COPY --from=builder --chown=spring:spring /app/target/*.jar app.jar
-
-ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=75.0"
-ENV SPRING_PROFILES_ACTIVE="production"
-
 EXPOSE 8080
-
-HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-    CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
-
-ENTRYPOINT ["sh", "-c", "java ${JAVA_OPTS} -jar /app/app.jar"]
+CMD ["java", "-jar", "/app/app.jar"]
