--- a/db_saver/pom.xml
+++ b/db_saver/pom.xml
@@ -3,25 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
+	<groupId>com.ramis</groupId>
+	<artifactId>db-saver</artifactId>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
+
+
 	<parent>
-		<groupId>com.ramis</groupId>
-		<artifactId>MaratikFaceitAnalyzer</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.5.9</version>
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-
-	<artifactId>db_saver</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-
-	<name>db_saver</name>
-	<description>db_saver</description>
-
-	<scm>
-		<connection/>
-		<developerConnection/>
-		<tag/>
-		<url/>
-	</scm>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
