--- a/faceit_analyzer/pom.xml
+++ b/faceit_analyzer/pom.xml
@@ -3,18 +3,18 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>com.ramis</groupId>
-		<artifactId>MaratikFaceitAnalyzer</artifactId>
-		<version>1.0-SNAPSHOT</version>
-		<relativePath>../pom.xml</relativePath> <!-- lookup parent from repository -->
-	</parent>
-
+	<groupId>com.ramis</groupId>
 	<artifactId>faceit_analyzer</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0</version>
+	<packaging>jar</packaging>
 
-	<name>faceit_analyzer</name>
-	<description>faceit_analyzer</description>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>3.5.9</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 	<url/>
 	<licenses>
 		<license/>
