--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+server.port=8080
+
 spring.kafka.bootstrap-servers=${KAFKA_URL:localhost:9092}
 spring.kafka.consumer.auto-offset-reset=earliest
 
