--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -1,13 +1,13 @@
 spring.application.name=dbsaver
 
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/faceitDb}
+spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD:postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=8080
 
-spring.kafka.bootstrap-servers=${KAFKA_URL:localhost:9092}
+spring.kafka.bootstrap-servers=${KAFKA_URL:}
 spring.kafka.consumer.auto-offset-reset=earliest
 
 spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
