--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=dbsaver
 
 spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:postgres}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 server.port=8080
