--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=dbsaver
 
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.url=jdbc:postgresql://${PGHOST:${POSTGRES_HOST}}:${PGPORT:${POSTGRES_PORT}}/${PGDATABASE:${POSTGRES_DB}}
+
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
