--- a/db_saver/src/main/resources/application.properties
+++ b/db_saver/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.application.name=dbsaver
 
-spring.datasource.url=jdbc:postgresql://${PGHOST:${POSTGRES_HOST}}:${PGPORT:${POSTGRES_PORT}}/${PGDATABASE:${POSTGRES_DB}}
-
-spring.datasource.username=${PGUSER}
-spring.datasource.password=${PGPASSWORD}
+spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+spring.datasource.username=${POSTGRES_USER}
+spring.datasource.password=${POSTGRES_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 
