ADD new feature, database for TelegramBotService

--- a/TelegramBotService/src/main/resources/application.properties
+++ b/TelegramBotService/src/main/resources/application.properties
@@ -1,7 +1,14 @@
 spring.application.name=TelegramBotService
 
 
-telegram.bot-name=${BOT_NAME}
+telegram.bot-name=${BOT_NAME:MaratikFaceit_bot}
 telegram.bot-token=${BOT_TOKEN}
+
+spring.datasource.url=${DB_URL:jdbc:postgresql://localhost:5432/db_telegram}
+spring.datasource.username=${DB_USER:postgres}
+spring.datasource.password=${DB_PASS:postgres}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 
 server.port=8082
